--- a/packages/contract/packages/contract/tsconfig.json
+++ b/packages/contract/packages/contract/tsconfig.json
@@ -1,27 +1,35 @@
 {
   "compilerOptions": {
+    "target": "esnext",  // DO NOT CHANGE!
+    "module": "commonjs",  // DO NOT CHANGE!
+    "moduleResolution": "node",
+    "allowJs": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "declaration": true,
+    "strict": true,
+    "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
+    "strictNullChecks": true /* Enable strict null checks. */,
+    "strictFunctionTypes": true /* Enable strict checking of function types. */,
+    "noUnusedLocals": false /* Report errors on unused locals. */,
+    "noUnusedParameters": false /* Report errors on unused parameters. */,
+    "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
+    "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
+    "importHelpers": true,
+    "skipLibCheck": true,
+    "composite": true,
     "types": [
-      "node"
+      "node",
     ],
-    "target": "ES2019",
-    "module": "commonjs",
+    "lib": [
+      "ES6",
+    ],
     "rootDir": "./",
     "outDir": "./build",
-    "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitAny": false,
-    "declaration": true,
-    "resolveJsonModule": true,
-    "noImplicitReturns": false,
-    "noImplicitThis": false,
-    "allowSyntheticDefaultImports": true,
-    "noEmitOnError": true,
     "baseUrl": ".",
-    "composite": true,
-    "moduleResolution": "node"
   },
   "baseUrl": ".",
   "include": [
