--- a/packages/contract/packages/core/package.json
+++ b/packages/contract/packages/core/package.json
@@ -2,12 +2,13 @@
   "name": "@prosopo/provider-core",
   "version": "0.0.0",
   "author": "Prosopo",
-  "main": "index.js",
+  "main": "build/src/index.js",
+  "type": "commonjs",
   "scripts": {
     "build": "yarn tsc -b . --verbose",
     "dev": "yarn build && yarn setup && yarn start",
-    "start": "yarn ts-node ./src/cli/cli.ts",
-    "setup": "yarn ts-node ./build/scripts/setupdev.js",
+    "start": "yarn redspot run ./build/src/cli/cli.js",
+    "setup": "yarn redspot run ./scripts/setupdev.ts",
     "mnemonic": "yarn ts-node ./scripts/generateMnemonic.ts",
     "test": "yarn redspot test",
     "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
