--- a/packages/provider/packages/core/package.json
+++ b/packages/provider/packages/core/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "yarn tsc -b . --verbose",
     "dev": "yarn build && yarn setup && yarn start",
-    "start": "yarn redspot run ./build/src/cli/cli.js",
+    "start": "yarn redspot run ./src/cli/cli.ts",
     "setup": "yarn redspot run ./scripts/setupdev.ts",
     "mnemonic": "yarn ts-node ./scripts/generateMnemonic.ts",
     "test": "yarn redspot test",
@@ -26,9 +26,11 @@
     "@redspot/watcher": "file:../../../../redspot/build/redspot-watcher",
     "@types/mocha": "^9.0.0",
     "c8": "^7.11.0",
+    "cron-parser": "^4.2.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
     "mongodb": "^4.1.4",
+    "pm2": "^5.2.0",
     "redspot": "file:../../../../redspot/build/redspot-core",
     "zod": "^3.11.6"
   },
