--- a/packages/provider/packages/core/package.json
+++ b/packages/provider/packages/core/package.json
@@ -26,6 +26,7 @@
     "@redspot/watcher": "file:../../../../redspot/build/redspot-watcher",
     "@types/mocha": "^9.0.0",
     "c8": "^7.11.0",
+    "cron": "^1.8.2",
     "cron-parser": "^4.2.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
