--- a/demos/dapp-example/contracts/Cargo.toml
+++ b/demos/dapp-example/contracts/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "dapp"
-version = "3.0.0-rc8"
+version = "3.0.0-rc9"
 authors = ["Chris Taylor chris@prosopo.io"]
 edition = "2021"
 
 [dependencies]
-ink_primitives = { version = "3.0.0-rc9", default-features = false }
-ink_metadata = { version = "3.0.0-rc9", default-features = false, features = ["derive"], optional = true }
-ink_env = { version = "3.0.0-rc9", default-features = false }
-ink_storage = { version = "3.0.0-rc9", default-features = false }
-ink_lang = { version = "3.0.0-rc9", default-features = false }
-ink_prelude = { version = "3.0.0-rc9", default-features = false }
+ink_primitives = { git = "https://github.com/paritytech/ink", version = "3.0.0-rc9", default-features = false }
+ink_metadata = { git = "https://github.com/paritytech/ink", version = "3.0.0-rc9", default-features = false, features = ["derive"], optional = true }
+ink_env = { git = "https://github.com/paritytech/ink", version = "3.0.0-rc9", default-features = false }
+ink_storage = { git = "https://github.com/paritytech/ink", version = "3.0.0-rc9", default-features = false }
+ink_lang = { git = "https://github.com/paritytech/ink", version = "3.0.0-rc9", default-features = false }
+ink_prelude = { git = "https://github.com/paritytech/ink", version = "3.0.0-rc9", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
-prosopo = { version = "3.0.0-rc9", git = "https://github.com/prosopo-io/protocol", default-features = false, features = ["ink-as-dependency"] }
+prosopo = { git = "https://github.com/prosopo-io/protocol", branch = "master", default-features = false, features = ["ink-as-dependency"] }
 
 [lib]
 name = "dapp"
