contract: Hotfix/bump mongodb 4 1 4 (#87)
contract: * revert double provider funds for providerUpdate value
contract: 
contract: * bump mongodb 4.1.4
contract: 
contract: Co-authored-by: seht <seht@hyx.net>

--- a/packages/contract/packages/core/package.json
+++ b/packages/contract/packages/core/package.json
@@ -30,7 +30,7 @@
     "cron-parser": "^4.2.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
-    "mongodb": "^4.1.4",
+    "mongodb": "4.1.4",
     "pm2": "^5.2.0",
     "redspot": "file:../../../../redspot/build/redspot-core",
     "zod": "^3.11.6"
