--- a/packages/contract/packages/core/tsconfig.json
+++ b/packages/contract/packages/core/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "jsx": "react",
     "target": "esnext",  // DO NOT CHANGE!
     "module": "commonjs",  // DO NOT CHANGE!
     "moduleResolution": "node",
