--- a/packages/contract/packages/core/package.json
+++ b/packages/contract/packages/core/package.json
@@ -40,12 +40,14 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.0.6",
     "@types/chai": "^4.2.14",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.13",
     "@types/find-up": "^4.0.0",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "dotenv": "^14.3.2",
     "eslint": "^8.9.0",
     "eslint-config-airbnb-base": "^15.0.0",
