--- a/packages/provider/packages/contract/package.json
+++ b/packages/provider/packages/contract/package.json
@@ -38,14 +38,14 @@
     "@polkadot/util": "8.5.1",
     "@polkadot/util-crypto": "8.5.1",
     "@polkadot/x-fetch": "8.5.1",
-    "@redspot/chai": "file:../../../../redspot/build/redspot-chai",
-    "@redspot/decimals": "file:../../../../redspot/build/redspot-decimals",
-    "@redspot/explorer": "file:../../../../redspot/build/redspot-explorer",
-    "@redspot/gas-reporter": "file:../../../../redspot/build/redspot-gas-reporter",
-    "@redspot/known-types": "file:../../../../redspot/build/redspot-known-types",
-    "@redspot/patract": "file:../../../../redspot/build/redspot-patract",
-    "@redspot/watcher": "file:../../../../redspot/build/redspot-watcher",
-    "redspot": "file:../../../../redspot/build/redspot-core",
+    "@redspot/chai": "0.13.6",
+    "@redspot/decimals": "0.13.6",
+    "@redspot/explorer": "0.13.6",
+    "@redspot/gas-reporter": "0.13.6",
+    "@redspot/known-types": "0.13.6",
+    "@redspot/patract": "0.13.6",
+    "@redspot/watcher": "0.13.6",
+    "redspot": "0.13.6",
     "zod": "^3.11.6"
   },
   "devDependencies": {
