--- a/packages/provider/packages/core/package.json
+++ b/packages/provider/packages/core/package.json
@@ -19,13 +19,13 @@
   },
   "dependencies": {
     "@prosopo/contract": "workspace:*",
-    "@redspot/chai": "file:../../../../redspot/build/redspot-chai",
-    "@redspot/decimals": "file:../../../../redspot/build/redspot-decimals",
-    "@redspot/explorer": "file:../../../../redspot/build/redspot-explorer",
-    "@redspot/gas-reporter": "file:../../../../redspot/build/redspot-gas-reporter",
-    "@redspot/known-types": "file:../../../../redspot/build/redspot-known-types",
-    "@redspot/patract": "file:../../../../redspot/build/redspot-patract",
-    "@redspot/watcher": "file:../../../../redspot/build/redspot-watcher",
+    "@redspot/chai": "0.13.6",
+    "@redspot/decimals": "0.13.6",
+    "@redspot/explorer": "0.13.6",
+    "@redspot/gas-reporter": "0.13.6",
+    "@redspot/known-types": "0.13.6",
+    "@redspot/patract": "0.13.6",
+    "@redspot/watcher": "0.13.6",
     "@types/mocha": "^9.0.0",
     "c8": "^7.11.0",
     "cron": "^1.8.2",
@@ -34,7 +34,7 @@
     "express": "^4.17.1",
     "mongodb": "4.1.4",
     "pm2": "^5.2.0",
-    "redspot": "file:../../../../redspot/build/redspot-core",
+    "redspot": "0.13.6",
     "zod": "^3.11.6"
   },
   "devDependencies": {
