--- a/packages/procaptcha/.env
+++ b/packages/procaptcha/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_BASE_URL=http://localhost:3000
-REACT_APP_API_PATH_PREFIX=/v1/prosopo
-REACT_APP_DAPP_CONTRACT_ADDRESS=
+API_BASE_URL=http://localhost:3000
+API_PATH_PREFIX=/v1/prosopo
+DAPP_CONTRACT_ADDRESS=
