--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "packageManager": "yarn@3.2.0",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "yarn tsc -b . --verbose"
+  },
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -40,28 +45,7 @@
     "react-dev-utils": "^12.0.0",
     "webpack": "^5.70.0"
   },
-  "scripts": {
-    "start": "NODE_ENV=development PORT=3001 react-app-rewired start",
-    "build": "NODE_ENV=production react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
