--- a/packages/procaptcha/tsconfig.json
+++ b/packages/procaptcha/tsconfig.json
@@ -1,16 +1,18 @@
 {
   "compilerOptions": {
     "target": "esnext",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "allowJs": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
+    "module": "esnext",
     "sourceMap": true,
+    "strict": true,
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declaration": true,
-    "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
@@ -20,30 +22,45 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "importHelpers": true,
-    "skipLibCheck": true,
+    "resolveJsonModule": true,
+
+    "useUnknownInCatchVariables": false,
+
     "composite": true,
+
     "types": [
       "node"
     ],
-    "lib": [
-      "ES6",
-      "dom"
-    ],
-    "rootDir": "./",
-    "outDir": "./build",
-    "baseUrl": ".",
-    "jsx": "react-jsx"
+
+    "paths": {
+      "@prosopo/contract": [
+        "../contract/src"
+      ],
+      "@prosopo/contract/*": [
+        "../contract/src/*"
+      ],
+      "@prosopo/provider": [
+        "../provider/src"
+      ],
+      "@prosopo/provider/*": [
+        "../provider/src/*"
+      ]
+    },
+    
+    "outDir": "./dist"
   },
   "include": [
-    "packages/**/*.ts",
-    "packages/**/*.tsx",
-    "packages/**/*.json"
+    "./src/**/*.ts",
+    "./src/abi/*.json"
   ],
-  "exclude": [
-    "node_modules",
-    "artifacts",
-    ".cache",
-    "build/**/*",
-    "**/build/**/*"
+  "references": [
+    {
+      "path": "../provider",
+      "name": "@prosopo/provider"
+    },
+    {
+      "path": "../contract",
+      "name": "@prosopo/contract"
+    }
   ]
 }
