procaptcha-react: pack

--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -1,67 +1,21 @@
 {
-  "name": "@prosopo/procaptcha",
+  "name": "@prosopo/procaptcha-react",
   "version": "0.0.0",
   "private": true,
   "packageManager": "yarn@3.2.0",
+  "description": "",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "yarn tsc -b . --verbose"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.4.4",
-    "@mui/styles": "^5.4.4",
-    "@polkadot/api": "^7.7.1",
-    "@polkadot/api-contract": "^7.7.1",
-    "@polkadot/extension-dapp": "^0.42.7",
-    "@polkadot/rpc-provider": "^7.7.1",
-    "@polkadot/ui-keyring": "^1.0.1",
-    "@polkadot/util": "^9.0.1",
-    "@polkadot/util-crypto": "^9.0.1",
-    "@prosopo/contract": "0.0.0",
-    "@prosopo/provider": "0.0.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.26.1",
-    "browserify-fs": "^1.0.0",
-    "dotenv": "^16.0.0",
-    "fs": "^0.0.1-security",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "@prosopo/procaptcha": "0.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "node-polyfill-webpack-plugin": "^1.1.4",
-    "react-app-rewired": "^2.2.1",
-    "react-dev-utils": "^12.0.0",
-    "webpack": "^5.70.0"
-  },
-  "scripts": {
-    "start": "NODE_ENV=development PORT=3001 react-app-rewired start",
-    "build": "NODE_ENV=production react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "@types/react": "^18.0.8",
+    "react": "^18.1.0",
+    "typescript": "^4.6.4"
   }
 }
