--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "packageManager": "yarn@3.2.0",
   "description": "",
+  "main": "build/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "yarn tsc -b . --verbose"
