--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "packageManager": "yarn@3.2.0",
   "description": "",
-  "main": "build/src/index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "yarn tsc -b . --verbose"
@@ -21,8 +21,8 @@
     "@polkadot/ui-keyring": "^1.0.1",
     "@polkadot/util": "^9.0.1",
     "@polkadot/util-crypto": "^9.0.1",
-    "@prosopo/contract": "0.0.0",
-    "@prosopo/provider": "0.0.0",
+    "@prosopo/contract": "workspace:packages/contract",
+    "@prosopo/provider": "workspace:packages/provider",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
