--- a/packages/procaptcha-react/tsconfig.json
+++ b/packages/procaptcha-react/tsconfig.json
@@ -37,27 +37,12 @@
       "esnext",
     ],
 
-    "paths": {
-      "@prosopo/procaptcha": [
-        "../procaptcha/src"
-      ],
-      "@prosopo/procaptcha/*": [
-        "../procaptcha/src/*"
-      ]
-    },
-
-    "rootDirs": ["./src"],
+    "rootDir": "./src",
     "outDir": "./build"
 
   },
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx"
-  ],
-  "references": [
-    {
-      "path": "../procaptcha",
-      "name": "@prosopo/procaptcha"
-    }
   ]
 }
