--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -5,20 +5,21 @@
   "main": "build/src/index.js",
   "type": "commonjs",
   "scripts": {
-    "build": "yarn tsc -b . --verbose",
-    "dev": "yarn build && yarn setup && yarn start",
-    "start": "yarn ts-node ./src/cli/cli.ts",
-    "setup": "yarn ts-node ./scripts/setupdev.ts",
-    "mnemonic": "yarn ts-node ./scripts/generateMnemonic.ts",
-    "test": "yarn redspot test",
-    "test:mock": "NODE_ENV=test yarn redspot test",
-    "populate-data": "yarn redspot run ./src/dataUtils/populateDatabase.ts",
-    "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
-    "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
-    "dev-provider-dataset": "yarn build && yarn start provider_add_data_set --file /usr/src/data/captchas.json"
+    "clean": "tsc --build --clean",
+    "build": "tsc --build --verbose",
+    "dev": "npx build && npx setup && npx start",
+    "start": "npx ts-node ./src/cli/cli.ts",
+    "setup": "npx ts-node ./scripts/setupdev.ts",
+    "mnemonic": "npx ts-node ./scripts/generateMnemonic.ts",
+    "test": "npx redspot test",
+    "test:mock": "NODE_ENV=test npx redspot test",
+    "populate-data": "npx redspot run ./src/dataUtils/populateDatabase.ts",
+    "dev-provider-register": "npx build && npx start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
+    "dev-provider-stake": "npx build && npx start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
+    "dev-provider-dataset": "npx build && npx start provider_add_data_set --file /usr/src/data/captchas.json"
   },
   "dependencies": {
-    "@prosopo/contract": "workspace:packages/contract",
+    "@prosopo/contract": "0.0.0",
     "@redspot/chai": "0.13.6",
     "@redspot/decimals": "0.13.6",
     "@redspot/explorer": "0.13.6",
@@ -32,6 +33,7 @@
     "cron-parser": "^4.2.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
+    "find-up": "^6.3.0",
     "mongodb": "^4.1.4",
     "pm2": "^5.2.0",
     "redspot": "0.13.6",
@@ -49,30 +51,20 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^14.3.2",
-    "eslint": "^8.9.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-import-newlines": "^1.2.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "latest",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "mocha": "8.4.0",
     "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
   },
-  "files": [
-    "./redspot.config.ts",
-    "./prosopo.config.ts"
-  ],
-  "repository": "ssh://git@github.com/prosopo-io/provider",
-  "license": "GPL-3.0"
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/prosopo-io/provider.git"
+  },
+  "license": "GPL-3.0",
+  "types": "./build/src/index.d.ts",
+  "description": "> NOTE: The easiest way to deploy the Prosopo contract and run the Provider node is via the [integration repository](https://github.com/prosopo-io/integration/). The following instructions explain how to set up the repositories manually.",
+  "bugs": {
+    "url": "https://github.com/prosopo-io/provider/issues"
+  },
+  "homepage": "https://github.com/prosopo-io/provider#readme"
 }
