--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "packageManager": "yarn@3.2.0",
-  "description": "",
   "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "yarn tsc -b . --verbose"
+    "clean": "tsc --build --clean",
+    "build": "tsc --build --verbose"
   },
   "dependencies": {
     "@emotion/react": "^11.8.1",
@@ -21,8 +21,8 @@
     "@polkadot/ui-keyring": "^1.0.1",
     "@polkadot/util": "^9.0.1",
     "@polkadot/util-crypto": "^9.0.1",
-    "@prosopo/contract": "workspace:packages/contract",
-    "@prosopo/provider": "workspace:packages/provider",
+    "@prosopo/contract": "0.0.0",
+    "@prosopo/provider": "0.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -48,5 +48,15 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "types": "./build/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prosopo-io/procaptcha.git"
+  },
+  "bugs": {
+    "url": "https://github.com/prosopo-io/procaptcha/issues"
+  },
+  "homepage": "https://github.com/prosopo-io/procaptcha#readme",
+  "description": ""
 }
