--- a/packages/procaptcha/tsconfig.json
+++ b/packages/procaptcha/tsconfig.json
@@ -1,43 +1,25 @@
 {
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "sourceMap": true,
-    "strict": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "declaration": true,
-    "noImplicitAny": false,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "importHelpers": true,
-    "resolveJsonModule": true,
-
-    "useUnknownInCatchVariables": false,
-
-    "composite": true,
-
-    "types": [
-      "node"
-    ],
-    
     "rootDir": "./src",
-    "outDir": "./build"
+    "outDir": "./build",
+
+    "lib": [
+      "esnext",
+      "dom"
+    ],
 
   },
   "include": [
-    "src/**/*.ts",
-    "src/abi/*.json"
+    "./src/**/*.ts",
+    "./src/abi/*.json"
+  ],
+  "references": [ 
+    { 
+      "path": "../provider" 
+    },
+    { 
+      "path": "../contract" 
+    }
   ]
 }
