--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -3,20 +3,30 @@
   "version": "0.0.0",
   "private": true,
   "packageManager": "yarn@3.2.0",
-  "description": "",
   "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "yarn tsc -b . --verbose"
+    "clean": "tsc --build --clean",
+    "build": "tsc --build --verbose"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prosopo/procaptcha": "workspace:packages/procaptcha"
+    "@prosopo/procaptcha": "0.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.8",
     "react": "^18.1.0",
     "typescript": "^4.6.4"
-  }
+  },
+  "types": "./build/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prosopo-io/procaptcha-react.git"
+  },
+  "bugs": {
+    "url": "https://github.com/prosopo-io/procaptcha-react/issues"
+  },
+  "homepage": "https://github.com/prosopo-io/procaptcha-react#readme",
+  "description": ""
 }
