--- a/packages/procaptcha-react/tsconfig.json
+++ b/packages/procaptcha-react/tsconfig.json
@@ -1,48 +1,21 @@
 {
+  "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "jsx": "react",
-
-    "target": "esnext",
-    "module": "esnext",
-    "sourceMap": true,
-    "strict": true,
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "declaration": true,
-    "noImplicitAny": false,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "strictPropertyInitialization": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "importHelpers": true,
-    "resolveJsonModule": true,
-
-    "useUnknownInCatchVariables": false,
-
-    "composite": true,
-
-    "types": [
-      "node",
-    ],
+    "rootDir": "./src",
+    "outDir": "./build",
     "lib": [
       "esnext",
+      "dom"
     ],
-
-    "rootDir": "./src",
-    "outDir": "./build"
-
+    "jsx": "react"
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
+    "./src/**/*.ts",
+    "./src/**/*.tsx"
+  ],
+  "references": [ 
+    { 
+      "path": "../procaptcha"
+    }
   ]
 }
