provider: type:module

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "author": "Prosopo",
   "main": "build/src/index.js",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
