--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -2,12 +2,12 @@
   "name": "@prosopo/procaptcha-react",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "yarn@3.2.0",
   "main": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
-    "build": "tsc --build --verbose"
+    "build": "yarn build:esm",
+    "build:esm": "tsc --build --verbose"
   },
   "author": "",
   "license": "ISC",
