--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -3,15 +3,15 @@
   "version": "0.0.0",
   "author": "Prosopo",
   "main": "build/src/index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
     "dev": "yarn build && yarn run setup && yarn start",
-    "start": "yarn ts-node ./src/cli/cli.ts",
-    "setup": "yarn ts-node ./scripts/setupdev.ts",
-    "mnemonic": "yarn ts-node ./scripts/generateMnemonic.ts",
-    "test": "yarn redspot test",
+    "start": "ts-node ./src/cli/cli.ts",
+    "setup": "ts-node ./scripts/setupdev.ts",
+    "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
+    "test": "ts-mocha tests/**/*.test.ts",
     "test:mock": "NODE_ENV=test yarn test",
     "populate-data": "yarn redspot run ./src/dataUtils/populateDatabase.ts",
     "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
@@ -33,7 +33,7 @@
     "cron-parser": "^4.2.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
-    "find-up": "^6.3.0",
+    "find-up": "^4.0.0",
     "mongodb": "^4.1.4",
     "pm2": "^5.2.0",
     "redspot": "0.13.6",
@@ -44,8 +44,8 @@
     "@types/chai": "^4.2.14",
     "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.13",
-    "@types/find-up": "^4.0.0",
     "@types/node": "^17.0.8",
+    "@types/find-up": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "chai": "^4.3.4",
