--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -5,8 +5,6 @@
     "target": "esnext",
     "module": "commonjs",
 
-    "esModuleInterop": true,
-
     "paths": {
       "@prosopo/provider": [
         "./src"
@@ -25,11 +23,14 @@
     "outDir": "./build",
 
   },
+  "ts-node": {
+    "esm": true
+  },
   "include": [
     "./*.ts",
-    "./src/**/*",
-    "./tests/**/*",
-    "./scripts/**/*"
+    "./src/**/*.ts",
+    "./tests/**/*.ts",
+    "./scripts/**/*.ts"
   ],
   "references": [ 
     { 
