provider: test:mocha

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -11,7 +11,8 @@
     "start": "ts-node ./src/cli/cli.ts",
     "setup": "ts-node ./scripts/setupdev.ts",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
-    "test": "ts-mocha tests/**/*.test.ts",
+    "test": "redspot test",
+    "test:mocha": "ts-mocha tests/**/*.test.ts",
     "test:mock": "NODE_ENV=test yarn test",
     "populate-data": "yarn redspot run ./src/dataUtils/populateDatabase.ts",
     "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
