--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -3,47 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "main": "build/index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.4.4",
-    "@mui/styles": "^5.4.4",
     "@polkadot/api": "^7.7.1",
     "@polkadot/api-contract": "^7.7.1",
     "@polkadot/extension-dapp": "^0.42.7",
     "@polkadot/rpc-provider": "^7.7.1",
-    "@polkadot/ui-keyring": "^1.0.1",
+    "@polkadot/types": "7.12.1",
     "@polkadot/util": "^9.0.1",
     "@polkadot/util-crypto": "^9.0.1",
-    "@prosopo/contract": "0.0.0",
     "@prosopo/provider": "0.0.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "axios": "^0.26.1",
-    "browserify-fs": "^1.0.0",
-    "dotenv": "^16.0.0",
-    "fs": "^0.0.1-security",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "axios": "^0.26.1"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
-    "node-polyfill-webpack-plugin": "^1.1.4",
-    "react-app-rewired": "^2.2.1",
-    "react-dev-utils": "^12.0.0",
-    "webpack": "^5.70.0"
+    "typescript": "^4.5.5"
   },
   "keywords": [],
   "author": "",
