--- a/packages/procaptcha-react/package.json
+++ b/packages/procaptcha-react/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "main": "build/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "tsc --build --clean",
@@ -12,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mui/material": "^5.4.4",
+    "@mui/styles": "^5.4.4",
     "@prosopo/procaptcha": "0.0.0"
   },
   "devDependencies": {
