--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -49,12 +49,14 @@
     "@types/chai-as-promised": "^7.1.5",
     "@types/express": "^4.17.13",
     "@types/find-up": "^4.0.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "dotenv": "^14.3.2",
+    "fs-extra": "^10.1.0",
     "mocha": "8.4.0",
     "prettier": "^2.5.1",
     "ts-mocha": "^10.0.0",
