--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -8,7 +8,8 @@
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
     "dev": "yarn build && yarn run setup && yarn start",
-    "start": "ts-node ./src/cli/cli.ts",
+    "cli": "ts-node ./src/cli/cli.ts",
+    "start": "ts-node ./src/cli/start.ts",
     "setup": "ts-node ./scripts/setup.ts",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
     "imageserver:start": "ts-node ./scripts/imageserver.ts",
