--- a/demos/demo-nft-marketplace/package.json
+++ b/demos/demo-nft-marketplace/package.json
@@ -8,30 +8,39 @@
     "build-prod": "next build",
     "start": "next start",
     "build:tailwind": "postcss src/scss/base.scss -o src/scss/tailwind.scss",
-    "storybook": "start-storybook -p 5000",
     "lint": "eslint '*/**/*.{ts,tsx}' --quiet",
-    "lint-fix": "yarn run lint --fix"
+    "lint-fix": "yarn run lint --fix",
+    "find:unused": "next-unused"
   },
   "dependencies": {
     "@ceramicnetwork/3id-did-resolver": "^1.4.7",
     "@ceramicnetwork/http-client": "^1.4.3",
     "@ceramicnetwork/stream-caip10-link": "^1.2.0",
     "@ceramicstudio/idx": "^0.12.2",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.4",
     "@hookform/error-message": "^2.0.0",
     "@hookform/resolvers": "^2.8.2",
+    "@polkadot/api": "^8.6.1",
+    "@polkadot/api-contract": "^8.7.1",
+    "@polkadot/extension-inject": "^0.44.1",
+    "@polkadot/rpc-provider": "^8.7.1",
+    "@prosopo/procaptcha": "workspace:^",
+    "@prosopo/procaptcha-react": "workspace:^",
     "@rarible/protocol-api-client": "^0.1.8",
     "@rarible/protocol-ethereum-sdk": "^0.8.0",
     "@rarible/types": "^0.1.9",
     "@rarible/web3-ethereum": "^0.8.0",
     "@self.id/core": "^0.2.0",
     "@stablelib/random": "^1.0.1",
-    "@storybook/addon-docs": "^6.3.8",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@unique-nft/types": "^0.6.0-4",
     "autoprefixer": "^9.8.6",
     "bnc-onboard": "^1.35.1",
+    "browserify-fs": "^1.0.0",
     "caip": "^0.9.2",
     "date-fns": "^2.24.0",
     "did-resolver": "^3.1.3",
@@ -42,35 +51,30 @@
     "form-data": "^4.0.0",
     "key-did-provider-ed25519": "^1.1.0",
     "key-did-resolver": "^1.4.0",
-    "next": "12",
+    "next": "canary",
     "next-images": "^1.8.1",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "postcss": "^7.0.35",
     "postcss-cli": "^8.3.1",
     "postcss-loader": "^4.2.0",
-    "react": "^17.0.2",
+    "react": "^18.1.0",
     "react-currency-input-field": "^3.5.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.1.0",
     "react-dropzone": "^11.4.2",
     "react-hook-form": "^7.16.1",
     "react-query": "^3.25.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "web3": "^1.6.0",
+    "webpack": "^5.72.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
     "@ceramicstudio/idx-constants": "^1.0.0",
     "@fullhuman/postcss-purgecss": "^4.0.0",
-    "@storybook/addon-actions": "^6.1.17",
-    "@storybook/addon-info": "^5.3.21",
-    "@storybook/addon-knobs": "^6.1.17",
-    "@storybook/addon-notes": "^5.3.21",
-    "@storybook/addon-viewport": "^6.3.8",
-    "@storybook/addons": "^6.1.17",
-    "@storybook/preset-create-react-app": "^3.1.5",
-    "@storybook/react": "^6.1.17",
+    "@polkadot/types": "^8.7.1",
     "@types/node": "^14.14.25",
-    "@types/react": "^17.0.1",
+    "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "awesome-typescript-loader": "^5.2.1",
@@ -84,6 +88,7 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "husky": "^4.2.5",
     "lint-staged": "^11.2.0",
+    "next-unused": "^0.0.6",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.4.1",
     "react-docgen-typescript-loader": "^3.7.2",
@@ -100,6 +105,16 @@
   "lint-staged": {
     "*.{ts,tsx}": [
       "eslint"
+    ]
+  },
+  "next-unused": {
+    "alias": {},
+    "include": [
+      "src/*"
+    ],
+    "exclude": [],
+    "entrypoints": [
+      "src/pages"
     ]
   }
 }
