provider: npm ws

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -3,11 +3,9 @@
   "version": "0.0.0",
   "author": "Prosopo",
   "main": "build/src/index.js",
-  "type": "commonjs",
   "scripts": {
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
-    "dev": "yarn build && yarn run setup && yarn start",
     "cli": "ts-node ./src/cli/cli.ts",
     "start": "ts-node ./src/cli/start.ts",
     "setup": "ts-node ./scripts/setup.ts",
@@ -15,7 +13,7 @@
     "imageserver:start": "ts-node ./scripts/imageserver.ts",
     "test": "redspot test",
     "test:mocha": "ts-mocha tests/**/*.test.ts",
-    "test:mock": "NODE_ENV=test yarn test",
+    "test:mock": "NODE_ENV=test npm run test",
     "populate-data": "ts-node ./src/dataUtils/populateDatabase.ts",
     "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
     "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
@@ -42,7 +40,7 @@
     "cron-parser": "^4.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "find-up": "^6.3.0",
+    "find-up": "^4.0.0",
     "mongodb": "^4.7.0",
     "pm2": "^5.2.0",
     "yargs": "^17.5.1",
