--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -2,12 +2,12 @@
   "name": "@prosopo/provider",
   "version": "0.0.0",
   "author": "Prosopo",
-  "main": "build/src/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
-    "cli": "ts-node ./src/cli/cli.ts",
-    "start": "ts-node ./src/cli/start.ts",
+    "cli": "node ./dist/cli/cli.js",
+    "start": "node ./dist/cli/start.js",
     "setup": "ts-node ./scripts/setup.ts",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
     "imageserver:start": "ts-node ./scripts/imageserver.ts",
@@ -40,7 +40,6 @@
     "cron-parser": "^4.4.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "find-up": "^4.0.0",
     "mongodb": "^4.7.0",
     "pm2": "^5.2.0",
     "yargs": "^17.5.1",
