--- a/packages/provider/.gitignore
+++ b/packages/provider/.gitignore
@@ -92,7 +92,7 @@ typings/
 # DynamoDB Local files
 .dynamodb/
 
-build/
+dist/
 
 /.yarn/cache
 # This is the Yarn build state; it's local to each clone
