--- a/packages/provider/tsconfig.json
+++ b/packages/provider/tsconfig.json
@@ -1,28 +1,21 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "rootDirs": [
-      "./",
-      "./src",
-      "./tests",
-      "./scripts"
-    ],
-    "outDir": "./build",
+    "rootDir": "./src",
+    "outDir": "./dist",
     "module": "commonjs",
     "target": "esnext",
   },
   "include": [
-    "./*.ts",
-    "./src/**/*.ts",
-    "./tests/**/*.ts",
-    "./scripts/**/*.ts"
+    "./src/**/*.ts"
+  ],
+  "files": [
+    "./src/prosopo.config.js",
+    "./src/redspot.config.js"
   ],
   "references": [ 
     { 
       "path": "../contract" 
     }
-  ],
-  "ts-node": {
-    "esm": true
-  }
+  ]
 }
