provider: Substrate test node (#131)
provider: * - Config loader utility
provider: - In-memory database for tests
provider: - Changes to config in populator script to allow specifying the number of accounts
provider: - Last traces of redspot removed and ts-mocha used for testing
provider: - New test substrate node in docker compose config
provider: - Switch to findup-sync from find-up
provider: - mocha types added to tsconfig
provider: 
provider: * All but one test passing
provider: 
provider: * All tests passing
provider: 
provider: * path fixes

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -12,9 +12,8 @@
     "setup": "ts-node ./scripts/setup.ts",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
     "imageserver:start": "ts-node ./scripts/imageserver.ts",
-    "test": "redspot test",
-    "test:mocha": "ts-mocha tests/**/*.test.ts",
-    "test:mock": "NODE_ENV=test npm run test",
+    "test": "yarn remove-test-container && docker compose up -d substrate-test-node && NODE_ENV=test ts-mocha tests/**/*.test.ts --timeout 120000",
+    "remove-test-container": "CONTAINER=$(docker ps -q -f name=substrate-test-node) && docker stop $CONTAINER || true && docker rm $CONTAINER || true",
     "populate-data": "ts-node ./src/dataUtils/populateDatabase.ts",
     "dev-provider-register": "yarn build && yarn start provider_register --fee=10 --serviceOrigin=https://localhost:8282 --payee=Provider --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
     "dev-provider-stake": "yarn build && yarn start provider_stake --value 10 --address=$(printenv | grep '^PROVIDER_ADDRESS' | cut -d '=' -f2)",
@@ -30,9 +29,6 @@
     "@polkadot/util": "^9.4.1",
     "@polkadot/util-crypto": "^9.4.1",
     "@prosopo/contract": "0.0.0",
-    "@redspot/chai": "^0.13.6",
-    "@redspot/decimals": "^0.13.6",
-    "@redspot/patract": "^0.13.6",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "consola": "^2.15.3",
@@ -52,6 +48,7 @@
     "@types/yargs": "^17.0.10",
     "fs-extra": "^10.1.0",
     "mocha": "^10.0.0",
+    "mongodb-memory-server": "^8.6.0",
     "redspot": "^0.13.6",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.8.1",
