provider: provider container

--- a/packages/provider/package.json
+++ b/packages/provider/package.json
@@ -8,9 +8,10 @@
     "clean": "tsc --build --clean",
     "build": "tsc --build --verbose",
     "cli": "ts-node ./cli/cli.ts",
+    "setup": "ts-node ./scripts/setup.ts",
     "start": "ts-node ./cli/start.ts",
     "start:test": "NODE_ENV=test && ts-node ./cli/start.ts",
-    "setup": "ts-node ./scripts/setup.ts",
+    "serve": "npm run setup && npm run start",
     "mnemonic": "ts-node ./scripts/generateMnemonic.ts",
     "imageserver:start": "ts-node ./scripts/imageserver.ts",
     "test": "NODE_ENV=test ts-mocha \"tests/**/*.test.ts\" --timeout 120000",
