demo-nft-marketplace: Integration (#6)
demo-nft-marketplace: * update contract
demo-nft-marketplace: 
demo-nft-marketplace: * add demo api
demo-nft-marketplace: 
demo-nft-marketplace: * update marketplace (remove ethereum stuff)
demo-nft-marketplace: 
demo-nft-marketplace: * cleanup
demo-nft-marketplace: 
demo-nft-marketplace: * mint 100 items on deploy
demo-nft-marketplace: 
demo-nft-marketplace: * hide product card bg image
demo-nft-marketplace: 
demo-nft-marketplace: * clean up
demo-nft-marketplace: 
demo-nft-marketplace: * update buy function
demo-nft-marketplace: 
demo-nft-marketplace: * remove unused assets
demo-nft-marketplace: 
demo-nft-marketplace: * add prices, buying and estimated gas
demo-nft-marketplace: 
demo-nft-marketplace: * update is_human and errors
demo-nft-marketplace: 
demo-nft-marketplace: * fix and move contract
demo-nft-marketplace: 
demo-nft-marketplace: * update nft marketplace
demo-nft-marketplace: 
demo-nft-marketplace: * update demo contract
demo-nft-marketplace: 
demo-nft-marketplace: * add setup
demo-nft-marketplace: 
demo-nft-marketplace: * add gas input
demo-nft-marketplace: 
demo-nft-marketplace: * Docker files for deploying demo-nft-marketplace
demo-nft-marketplace: 
demo-nft-marketplace: Co-authored-by: Sinisa Canak <sinisa.canak997@gmail.com>

--- a/demos/demo-nft-marketplace/contracts/Cargo.toml
+++ b/demos/demo-nft-marketplace/contracts/Cargo.toml
@@ -15,9 +15,9 @@ ink_prelude = { version = "3.2.0", default-features = false }
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
 scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
 
-brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp34"] }
+brush = { tag = "v1.7.1", git = "https://github.com/Supercolony-net/openbrush-contracts", default-features = false, features = ["psp34", "ownable"] }
 
-prosopo = { path = "../../../protocol/contracts", default-features = false, features = ["ink-as-dependency"] }
+prosopo = { git = "https://github.com/prosopo-io/protocol", branch = "ink-3.2.0", default-features = false, features = ["ink-as-dependency"] }
 
 base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
 serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
