--- a/packages/procaptcha/package.json
+++ b/packages/procaptcha/package.json
@@ -41,6 +41,6 @@
   "homepage": "https://github.com/prosopo-io/procaptcha#readme",
   "description": "",
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com"
+    "registry":"https://registry.npmjs.org"
   }
 }
